--- a/estilo.css
+++ b/estilo.css
@@ -42,7 +42,7 @@ body {
     float: left;
 }
 
-#menu ul li{   
+#menu ul li{  
     float: left;
     
 }
@@ -66,30 +66,24 @@ body {
     padding: 16px;
 }
 
- /* ********************************************login*******************************************  */
+ /* ********************************************login/ Corpo*******************************************  */
 
  #corpo {
     float: left;
- }
-
- #convite {
-    margin-top: 5%;
-    margin-left: 70%;
-    margin-bottom: -0.5%;
+    width: 48%;
  }
 
  #mulher{
-    width: 550px;
+    width: 280%;
  }
 
  #login {
     color: #445466;
     text-align: center;
     padding: 20px;
-    margin: 0% 65%;
-    clear: both;
+    margin: 0% 65%; 
     background: rgb(255, 255, 255);
-    width: 550px;
+    width: 80%;
  }
 
  #login h3{
@@ -317,6 +311,143 @@ body {
     color: #fff;
     background: #0371bb;
 }
+
+/* ************************************ Area do aluno ***************************************************** */
+
+#AreAluno span.Aluno {
+    font-size: 22px;
+    color: #445466;
+}
+
+#AreAluno span {
+    color: #0371bb;
+}
+
+#AreAluno h2 {
+    float: left;
+}
+
+#AreAluno {
+    float: left;
+    width: 100%;
+    background: #ffffff;
+}
+
+#AreAluno a {
+    line-height: 80px;
+    margin-right: 30px;
+    text-decoration: none;
+    color: #000;
+}
+
+#sair  {
+    line-height: 50px;
+    float: right;
+}
+
+#sair{
+    margin: auto 0;
+    display: block;
+    text-decoration: none;
+    color: #000;
+}
+
+/* ************************************* Tabela hanking ************************************************** */
+#tabela {
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 20px;
+    margin-bottom: 30px;
+    float: left;
+ }
+
+#tabela table {
+    
+    width: 350px;
+    border-collapse: collapse;
+    float: left;
+ }
+
+#tabela th, td {
+    
+    border: none;
+    padding: 5px;
+    
+ }
+
+#tabela td.nomes {
+    text-align: center;
+}
+
+ .branca {
+    background: #ffffff;;
+ }
+
+ #tabela td.largura {
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    background: #ffb411
+ }
+
+ #tabela td.primeiros {
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    background: #ffb411;
+    width: 20%;
+ }
+
+ .alinharDireta {
+    text-align: right;
+ }
+
+#tabela td.demais {
+    
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    background: #7931ff;
+    width: 20%;
+    
+}
+
+.medalha {
+      width: 50%;
+}
+
+ #tabela th {
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #fff;
+    background: #0381bb;
+ }
+
+ #tabela tr:hover {
+    font-size: 18px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    background: #61daff;
+    
+ }
+
+ #tabela th, tr:hover {
+    font-size: 16px;
+ }
+
+ #tabela h2 {
+    text-transform: uppercase;
+    color: #052542;
+ }
+
+ #convite {
+    margin-top: 5%;
+    margin-left: 70%;
+    margin-bottom: -0.5%;
+ }
+
+ /* *************************************************************** fim tabela ***************************************** */ 
+
 
  /***************************************** Cores******************************************************** */ 
 
