--- a/estilo.css
+++ b/estilo.css
@@ -91,6 +91,7 @@ body {
  }
 
  #login input {
+    text-align: center;
     background: #f8f8f8;
     border: 2px solid #dfdfdf;
     width: 130px;
