--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,8 @@
 body {
-    background: #bae7f8;
+    background: linear-gradient(to bottom, rgb(168, 226, 247, 0.7), rgb(20, 49, 146));
+    background: -webkit-linear-gradient(to bottom, rgb(168, 226, 247, 0.7), rgb(20, 49, 146));
+    background: -moz-linear-gradient(to bottom, rgb(168, 226, 247, 0.7), rgb(20, 49, 146));
+    background: -o-linear-gradient(to bottom, rgb(168, 226, 247, 0.7), rgb(20, 49, 146));
     font-size: 16px;
     font-family: 'Trebuchet MS', Helvetica, sans-serif;
     margin: 0;
@@ -55,12 +58,14 @@ body {
 }
 
 #menu ul a:hover {
+    border-radius: 5px 5px 0px 0px;
     background: #f1f1f1;
     margin: 0 1.1em;
     padding: 16px;
 }
 
 #menu .marcador a {
+    border-radius: 5px 5px 0px 0px;
     background: #f1f1f1;
     margin: 0 1.1em;
     padding: 16px;
@@ -82,7 +87,8 @@ body {
     text-align: center;
     padding: 20px;
     margin: 0% 65%; 
-    background: rgb(255, 255, 255);
+    background: rgb(255, 255, 255, 0.8);
+    border-radius: 10px;
     width: 80%;
  }
 
@@ -93,11 +99,22 @@ body {
  #login input {
     text-align: center;
     background: #f8f8f8;
+    border-radius: 8px;
     border: 2px solid #dfdfdf;
-    width: 130px;
+    width: 160px;
     height: 25px;
+    background-repeat: no-repeat;
+    background-position: 5px;
+    background-size: 12px;
  }
 
+#login input.usuario {
+    background-image: url(/imagens/icone-usuario.png);
+ }
+
+ #login input.senha {
+    background-image: url(/imagens/icone-cadeado.png);
+ }
  #login a {
     text-decoration: none;
     font-size: 12px;
@@ -107,7 +124,10 @@ body {
  #entrar {
     border: none;
     color: #fff;
-    background: #0371bb !important;
+    background: linear-gradient(to bottom, #0371bb, rgb(0, 1, 59, 0.8))  !important;
+    background: -webkit-linear-gradient(to bottom, #0371bb, rgb(0, 1, 59, 0.8));
+    background: -moz-linear-gradient(to bottom, #0371bb, rgb(0, 1, 59, 0.8));
+    background: -o-linear-gradient(to bottom, #0371bb, rgb(0, 1, 59, 0.8));
     padding-top: 10px;
     padding-bottom: 25px;
  }
@@ -126,7 +146,11 @@ body {
     color:#024877;
  }
  .cursos {
-    
+    border-radius: 8px;
+    background: linear-gradient(to top, rgb(255, 255, 255, 0.2), rgb(255, 255, 255, 0));
+    background: -webkit-linear-gradient(to top, rgb(255, 255, 255, 0.2), rgb(255, 255, 255, 0));
+    background: -moz-linear-gradient(to top, rgb(255, 255, 255, 0.2), rgb(255, 255, 255, 0));
+    background: -o-linear-gradient(to top, rgb(255, 255, 255, 0.2), rgb(255, 255, 255, 0));
     border: 2px solid #445466;
     width: 450px;
     height: 150px;
@@ -157,7 +181,10 @@ body {
  /* ****************************************** rodape *********************************************** */
  #rodape {
     clear: both;
-    background: #052542;
+    background: linear-gradient(to bottom,  #001a70, #001930);
+    background: -webkit-linear-gradient(to bottom,  #001a70, #001930);
+    background: -moz-linear-gradient(to bottom,  #001a70, #001930);
+    background: -o-linear-gradient(to bottom,  #001a70, #001930);
     height: 350px;
     color: #fff;
  }
@@ -183,16 +210,20 @@ body {
 /* ******************************************Sobre ****************************************** */
 
 #sobre {
+    background: linear-gradient(to top, rgba(17, 3, 224, 0.2), rgb(255, 255, 255, 0));
+    background: -webkit-linear-gradient(to top, rgba(17, 3, 224, 0.2), rgb(255, 255, 255, 0));
+    background: -moz-linear-gradient(to top, rgba(17, 3, 224, 0.2), rgb(255, 255, 255, 0));
+    background: -o-linear-gradient(to top, rgba(17, 3, 224, 0.2), rgb(255, 255, 255, 0));
     height: 800px;
 }
 
 #sobre h2 {
-   color: #052542;
+   color: #ffffff;
 }
 
 #sobre p {
     font-weight: bold;
-    color: #052542;
+    color: #000127;
 }
 
 #imgSobre {
@@ -220,7 +251,11 @@ body {
     color:#024877;
  }
  .contorno {
-    
+    border-radius: 8px;
+    background: linear-gradient(to top, rgba(255, 208, 1, 0.555), rgb(255, 255, 255, 0));
+    background: -webkit-linear-gradient(to top, rgba(255, 208, 1, 0.555), rgb(255, 255, 255, 0));
+    background: -moz-linear-gradient(to top, rgba(255, 208, 1, 0.555), rgb(255, 255, 255, 0));
+    background: -o-linear-gradient(to top, rgba(255, 208, 1, 0.555), rgb(255, 255, 255, 0));
     border: 2px solid #445466;
     width: 450px;
     height: 150px;
@@ -248,6 +283,15 @@ body {
     font-size: 1.1em;
  }
  /* *************************************** Cadastro **************************************************** */
+
+ fieldset {
+    border: none;
+ }
+
+ #formulario input {
+    border-radius: 5px;
+    border: 1px solid #445466;
+ }
 
 #menuCadastro ul { 
     margin: 0;
@@ -279,10 +323,6 @@ body {
     color: #fff;
 }
 
-#formulario h4 {
-    float: left;
-}
-
 .perguntas {
     width: 160px;
     padding-left: 25px;
@@ -291,7 +331,7 @@ body {
 
 #formulario {
     background: #fff;
-    width: 1000px;
+    width: 800px;
     margin: 20px;
     padding: 20px;
     float: left;
@@ -363,7 +403,6 @@ body {
  }
 
 #tabela table {
-    
     width: 350px;
     border-collapse: collapse;
     float: left;
@@ -384,18 +423,14 @@ body {
     background: #ffffff;;
  }
 
- #tabela td.largura {
-    font-weight: bold;
-    text-align: center;
-    color: #fff;
-    background: #ffb411
- }
-
  #tabela td.primeiros {
     font-weight: bold;
     text-align: center;
     color: #fff;
-    background: #ffb411;
+    background: linear-gradient(to top, rgb(255, 180, 17), rgb(224, 209, 0));
+    background: -webkit-linear-gradient(to top, rgb(255, 180, 17), rgb(224, 209, 0));
+    background: -moz-linear-gradient(to top, rgb(255, 180, 17), rgb(224, 209, 0));
+    background: -o-linear-gradient(to top, rgb(255, 180, 17), rgb(224, 209, 0));
     width: 20%;
  }
 
@@ -422,6 +457,10 @@ body {
     text-transform: uppercase;
     color: #fff;
     background: #0381bb;
+    background: linear-gradient(to bottom, rgb(3, 129, 187), rgba(11, 1, 148, 0.671));
+    background: -webkit-linear-gradient(to bottom, rgb(3, 129, 187), rgba(11, 1, 148, 0.671));
+    background: -moz-linear-gradient(to bottom, rgb(3, 129, 187), rgba(11, 1, 148, 0.671));
+    background: -o-linear-gradient(to bottom, rgb(3, 129, 187), rgba(11, 1, 148, 0.671));
  }
 
  #tabela tr:hover {
